# dino-game

./: CMakeLists.txt  main.cpp  makefile
entities/: Entity.cpp  Entity.h
